--- a/style.css
+++ b/style.css
@@ -74,6 +74,35 @@ thead{
     background-color: rgba(177,229,242,255);
     
 }
+
+/* FOOTER */
+
+#slot_img_1{
+    width: 200px;
+    height:150px;
+    background-image: url(img/monitor.jpg);
+    background-size: cover;
+    margin-bottom: 10px;
+    
+}
+
+#slot_img_2{
+    width: 200px;
+    height:150px;
+    background-image: url(img/graph.jpg);
+    background-size: cover;
+    margin-bottom: 20px;
+}
+
+.footer_links{
+    text-decoration: none;
+    color: white;
+    margin: 5px;
+}
+
+
+
+
     
     
 
